--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "start": "expo start",
+    "android": "expo run-android",
+    "ios": "expo run-ios",
+    "web": "expo start --web",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
